# taof

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  coverage.yml
cmake/: CodeCoverage.cmake  Options.cmake  Ports.cmake  UnitTest.cmake
src/active-objects/: CMakeLists.txt
src/active-objects/utils/: DoublyLinkedList.h  DoublyLinkedList.test.cpp  SinglyLinkedList.h  SinglyLinkedList.test.cpp
src/taof/: CMakeLists.txt  Event.h  EventQueue.h  EventQueue.test.cpp
src/taof/detail/: DoublyLinkedList.h  DoublyLinkedList.test.cpp  SinglyLinkedList.h  SinglyLinkedList.test.cpp
src/taof/ports/: CriticalSection.h
src/taof/ports/unit-tests/: CMakeLists.txt  MockCriticalSection.cpp  MockCriticalSection.h
